<resources>
    <string name="app_name">MemoryGame</string>
    <string name="welcome">Begin by selecting level of difficulty</string>
    <string name="home">Home</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="word">Word</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="prompt">Enter the word(s) as appears on the screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="newUser"> Register</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>
    <string name="score">Score: </string>
    <string name="scoreStatus"> 0</string>
</resources>
