<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wordToMemorize"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:text="@string/welcome"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:text="@string/easy"
        android:onClick="easyLevel"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintRight_toRightOf="@+id/wordToMemorize"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/wordToMemorize"
        android:layout_marginBottom="18dp"
        app:layout_constraintHorizontal_bias="0.326" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intermediate"
        android:onClick="intermediateLevel"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintRight_toRightOf="@+id/button1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        android:layout_marginBottom="18dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:text="@string/hard"
        android:onClick="difficultLevel"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/button2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button2"
        android:layout_marginBottom="61dp"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>